--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ DerivedData/
 *.mode2v3
 !default.mode2v3
 *.perspectivev3
+*.DS_Store
 !default.perspectivev3
 
 ## Obj-C/Swift specific
@@ -54,7 +55,7 @@ playground.xcworkspace
 # you should judge for yourself, the pros and cons are mentioned at:
 # https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
 #
-# Pods/
+Pods/
 #
 # Add this line if you want to avoid checking in source code from the Xcode workspace
 # *.xcworkspace
