--- a/EnvironmentSeparateDemo/Configurations/Staging.xcconfig
+++ b/EnvironmentSeparateDemo/Configurations/Staging.xcconfig
@@ -12,3 +12,7 @@
 
 APP_NAME = Demo Staging
 VERSION_NAME = 1.0.0
+
+PAGE1_CONFIG_TITLE = Hi Staging.
+PAGE1_CONFIG_TITLE2 = I am Developer Staging.
+PAGE1_CONFIG_TITLE3 = I live in Thailand Staging.
